--- a/berfmk/static/css/style.css
+++ b/berfmk/static/css/style.css
@@ -1205,6 +1205,49 @@ header
  *                              INPUT FORM END
  * --------------------------------------------------------------------------- *
  */
+/* --------------------------------------------------------------------------- *
+ *                              FORUM
+ * --------------------------------------------------------------------------- *
+ */
+#content > .border > .line
+{
+    height                  : 23px;
+    padding                 : 10px;
+    margin                  : 2px 0px 0px 0px;
+
+    -webkit-border-radius   : 7px;
+    -moz-border-radius      : 7px;
+    -o-border-radius        : 7px;
+    -ms-border-radius       : 7px;
+    border-radius           : 7px;
+
+    -webkit-transition      : all 200ms linear;
+    -moz-transition         : all 200ms linear;
+    -o-transition           : all 200ms linear;
+    -ms-transition          : all 200ms linear;
+    transition              : all 200ms linear;
+}
+/* 
+ * --------------------------------------------------------------------------- *
+ */
+#content > .border > .line:hover
+{
+    background              : #EEE;
+
+    -webkit-transition      : all 200ms linear;
+    -moz-transition         : all 200ms linear;
+    -o-transition           : all 200ms linear;
+    -ms-transition          : all 200ms linear;
+    transition              : all 200ms linear;
+}
+/* 
+ * --------------------------------------------------------------------------- *
+ */
+/*
+ * --------------------------------------------------------------------------- *
+ *                              FORUM END
+ * --------------------------------------------------------------------------- *
+ */
 /*
  * --------------------------------------------------------------------------- *
  *                              CONTENT END
