Add hidden news for unvisible testing

--- a/berfmk/static/css/style.css
+++ b/berfmk/static/css/style.css
@@ -1004,6 +1004,25 @@ header
 {
     color                   : #F15A23;
 }
+/* --------------------------------------------------------------------------- *
+ *                              NOTIFY
+ * --------------------------------------------------------------------------- *
+ */
+#content > .border > .notify
+{
+    background-image        : url(../images/notify.png);
+    background-repeat       : no-repeat;
+    height                  : 16px;
+    font-size               : 16px;
+    color                   : #F15A23;
+    margin-bottom           : -20px;
+    padding-left            : 25px; 
+}
+/*
+ * --------------------------------------------------------------------------- *
+ *                              NOTIFY END
+ * --------------------------------------------------------------------------- *
+ */
 /*
  * --------------------------------------------------------------------------- *
  *                              BORDER BOTTOM
