--- a/berfmk/static/css/style.css
+++ b/berfmk/static/css/style.css
@@ -963,6 +963,13 @@ header
     -ms-box-shadow          : 0px 1px 40px rgba(0, 0, 0, 0.5);
     box-shadow              : 0px 1px 40px rgba(0, 0, 0, 0.5);
 }
+/* 
+ * --------------------------------------------------------------------------- *
+ */
+#content > .border img
+{
+    display                 : none;
+}
 /*
  * --------------------------------------------------------------------------- *
  */
@@ -1230,9 +1237,9 @@ header
  */
 #content > .border > .line
 {
-    height                  : 23px;
     padding                 : 10px;
-    margin                  : 2px 0px 0px 0px;
+    margin-top              :2px;
+    margin-bottom           :-10px;
 
     -webkit-border-radius   : 7px;
     -moz-border-radius      : 7px;
@@ -1258,6 +1265,69 @@ header
     -o-transition           : all 200ms linear;
     -ms-transition          : all 200ms linear;
     transition              : all 200ms linear;
+}
+/* 
+ * --------------------------------------------------------------------------- *
+ */
+#content > .border > .line > .line
+{
+    padding                 : 10px;
+    margin                  : 2px 0px -10px 10px;
+
+    -webkit-border-radius   : 7px;
+    -moz-border-radius      : 7px;
+    -o-border-radius        : 7px;
+    -ms-border-radius       : 7px;
+    border-radius           : 7px;
+
+    -webkit-transition      : all 200ms linear;
+    -moz-transition         : all 200ms linear;
+    -o-transition           : all 200ms linear;
+    -ms-transition          : all 200ms linear;
+    transition              : all 200ms linear;
+}
+/* 
+ * --------------------------------------------------------------------------- *
+ */
+#content > .border > .line > .line:last-child
+{
+    margin-bottom           : 0px;
+}
+/* 
+ * --------------------------------------------------------------------------- *
+ */   
+#content > .border > .line > .line:hover
+{
+    background              : #CCC;
+
+    -webkit-transition      : all 200ms linear;
+    -moz-transition         : all 200ms linear;
+    -o-transition           : all 200ms linear;
+    -ms-transition          : all 200ms linear;
+    transition              : all 200ms linear;
+}
+/* 
+ * --------------------------------------------------------------------------- *
+ */
+#content > .border > .line .info
+{
+    position                : absolute;
+    right                   : 17%;
+    font-size               : 15px;
+}
+/* 
+ * --------------------------------------------------------------------------- *
+ */
+#content > .border > .line .info > .date
+{
+    font-style              : italic;
+}
+/* 
+ * --------------------------------------------------------------------------- *
+ */
+#content > .border > .line .info > .username
+{
+    font-weight             : bold; 
 }
 /* 
  * --------------------------------------------------------------------------- *
