--- a/berfmk/static/css/style.css
+++ b/berfmk/static/css/style.css
@@ -14,6 +14,20 @@ body
 /*
  * --------------------------------------------------------------------------- *
  */
+a
+{
+    color                   : #333;
+}
+/* 
+ * --------------------------------------------------------------------------- *
+ */
+a:hover
+{
+    color                   : #F15A23;
+}
+/* 
+ * --------------------------------------------------------------------------- *
+ */
 .reset
 {
     list-style              : none;
@@ -1336,6 +1350,69 @@ header
 /*
  * --------------------------------------------------------------------------- *
  *                              FORUM END
+ * --------------------------------------------------------------------------- *
+ */
+/* --------------------------------------------------------------------------- *
+ *                              PAGE-NAV
+ * --------------------------------------------------------------------------- *
+ */
+#content #page-nav
+{
+    text-align              : center;
+    padding                 : 10px;
+    margin-top              : 10px;
+}
+/* 
+ * --------------------------------------------------------------------------- *
+ */
+#content #page-nav > #next-prev
+{
+    font-size               : 2em;
+}
+/* 
+ * --------------------------------------------------------------------------- *
+ */
+#content #page-nav > #next-prev > a
+{
+    text-decoration         : none;
+    padding-left            : 4px;
+    padding-right           : 4px;
+
+    -webkit-border-radius   : 4px;
+    -moz-border-radius      : 4px;
+    -o-border-radius        : 4px;
+    -ms-border-radius       : 4px;
+    border-radius           : 4px;
+    
+    -webkit-transition      : all 100ms linear;
+    -moz-transition         : all 100ms linear;
+    -o-transition           : all 100ms linear;
+    transition              : all 100ms linear;
+}
+/* 
+ * --------------------------------------------------------------------------- *
+ */
+#content #page-nav > #next-prev > a:hover
+{
+    color                   : #FFF;
+    background              : #F15A23;
+    font-style              : none;
+    
+
+    -webkit-border-radius   : 4px;
+    -moz-border-radius      : 4px;
+    -o-border-radius        : 4px;
+    -ms-border-radius       : 4px;
+    border-radius           : 4px;
+
+    -webkit-transition      : all 250ms linear;
+    -moz-transition         : all 250ms linear;
+    -o-transition           : all 250ms linear;
+    transition              : all 250ms linear;
+}
+/*
+ * --------------------------------------------------------------------------- *
+ *                              PAGE-NAV END
  * --------------------------------------------------------------------------- *
  */
 /*
