Fixed some problems with auth system

--- a/berfmk/static/css/style.css
+++ b/berfmk/static/css/style.css
@@ -1533,3 +1533,16 @@ footer
  *                              FOOTER END
  * --------------------------------------------------------------------------- *
  */
+/* --------------------------------------------------------------------------- *
+ *                              RECAPTCHA IFRAME FIX
+ * --------------------------------------------------------------------------- *
+ */
+iframe
+{
+    display                 : none;
+}
+/*
+ * --------------------------------------------------------------------------- *
+ *                              RECAPTCHA IFRAME FIX END
+ * --------------------------------------------------------------------------- *
+ */
