Refactoring(migrate from F- to C- BGV): Added classes ForumList, ForumDetail, SectionDetail, SubSectionDetail, TopicDetail Pagedown scripts is now used for showing preview and rendering content Some cleanup

--- a/berfmk/static/css/style.css
+++ b/berfmk/static/css/style.css
@@ -28,6 +28,13 @@ a:hover
 /*
  * --------------------------------------------------------------------------- *
  */
+p
+{
+    margin-bottom           : 5px;
+}
+/*
+ * --------------------------------------------------------------------------- *
+ */
 .reset
 {
     list-style              : none;
